@@ -142,11 +142,12 @@ public class SystemInfoHandler extends RequestHandlerBase
       if( !os.getName().toLowerCase(Locale.ENGLISH).startsWith( "windows" ) ) {
         // Try some command line things
         info.add( "uname",  execute( "uname -a" ) );
-        info.add( "ulimit", execute( "ulimit -n" ) );
         info.add( "uptime", execute( "uptime" ) );
       }
     }
-    catch( Throwable ex ) {} // ignore
+    catch( Throwable ex ) {
+      ex.printStackTrace();
+    } 
     return info;
   }
   
@@ -181,21 +182,24 @@ public class SystemInfoHandler extends RequestHandlerBase
   private static String execute( String cmd )
   {
     DataInputStream in = null;
-    BufferedReader reader = null;
+    Process process = null;
     
     try {
-      Process process = Runtime.getRuntime().exec(cmd);
+      process = Runtime.getRuntime().exec(cmd);
       in = new DataInputStream( process.getInputStream() );
       // use default charset from locale here, because the command invoked also uses the default locale:
-      return IOUtils.toString( in );
+      return IOUtils.toString(in);
     }
     catch( Exception ex ) {
       // ignore - log.warn("Error executing command", ex);
       return "(error executing: " + cmd + ")";
     }
     finally {
-      IOUtils.closeQuietly( reader );
-      IOUtils.closeQuietly( in );
+      if (process != null) {
+        IOUtils.closeQuietly( process.getOutputStream() );
+        IOUtils.closeQuietly( process.getInputStream() );
+        IOUtils.closeQuietly( process.getErrorStream() );
+      }
     }
   }
   
